Added labProcedures.html to display the lab procedures for the logged in lab tech.  Working towards issue #43

--- a/iTrust2/src/main/resources/views/lt/labProcedures.html
+++ b/iTrust2/src/main/resources/views/lt/labProcedures.html
@@ -1,12 +1,103 @@
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:include="layout :: head(title=~{::title},links=~{})">
-<title>HCP Emergency Health Records</title>
+  <title>View Prescriptions</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 </head>
+
 <body th:include="layout :: body" th:with="content=~{::content}">
-
   <div th:fragment="content">
-    <h1>Under Construction</h1>
-  </div>
 
+
+    <script th:inline="javascript">
+      /* Otherwise Thymeleaf tries to parse Javascript as XML and breaks itself sometimes.  Sigh */
+      /*<![CDATA[*/
+      var app = angular.module("labApp", []);
+      app.controller('labCtrl', function ($scope, $http) {
+        $scope.labs = [];
+        $scope.pattern = /^\d{4}-\d{4}-\d{2}$/;
+        $scope.loadTable = function () {
+          $http.get("/iTrust2/api/v1/labprocedures").then(
+            function (response) {
+              $scope.labs = response.data;
+              $scope.message = "";
+            }, function (rejection) {
+              $scope.prescriptions = [];
+              $scope.message = "Could not display lab procedures";
+            });
+        }
+        
+        $scope.statuses = [];
+        $http.get("/iTrust2/api/v1/status").then(
+		function(response) {
+			$scope.statuses = response.data;
+		});
+        
+        function updateSatus(l, status) {
+        	/* pass in the lab procedure to update (l)
+        	   also need the new status from the dropdown.
+        	   Then update procedure here
+        	   */
+        	console.log(status); 
+        }
+        
+        $scope.loadTable();
+        
+        console.log($scope.labs);
+        
+        $scope.show_me = true;
+      });
+			/*]]>*/
+    </script>
+
+    <div ng-app="labApp" ng-controller="labCtrl">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="panel panel-primary">
+              <div class="panel-heading">
+                <h3>Lab Procedures</h3>
+              </div>
+              <div class="panel-body">
+                <table class="table table-bordered">
+                  <caption>My Lab Procedures:</caption>
+                  <thead>
+                    <tr>
+                      <th>Code</th>
+                      <th>Priority Level</th>
+                      <th>Date</th>
+                      <th>Comments</th>
+                      <th>Completion Status</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr name="prescriptionTableRow" ng-repeat="l in labs">
+                      <td name="codeCell">{{l.code.code}}</td>
+                      <td name="priorityCell">{{l.priorityLevel}}</td>
+                      <td name="dateCell">{{l.date.month + 1}}/{{l.date.dayOfMonth}}/{{l.date.year}}</td>
+                      <td name="commentCell">{{l.comments}}</td>
+                      <td name="statusCell" ng-show = "show_me">{{l.completionStatus}}
+                      <button ng-show = "show_me" ng-click = "show_me = !show_me">Update</button>
+                      
+                      </td>
+                      
+					  <td><select name="status" ng-hide = "show_me" ng-model="labStatus">
+						  <option ng-repeat="st in statuses">{{st}}</option>
+					  </select>
+					    <button ng-hide = "show_me" ng-click = "show_me = !show_me; updateStatus(l, status)">Submit</button>
+					  </td>
+						<!--{{l.completionStatus}}  -->
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
