--- a/iTrust2/src/main/resources/views/patient/editPersonalRepresentatives.html
+++ b/iTrust2/src/main/resources/views/patient/editPersonalRepresentatives.html
@@ -18,10 +18,15 @@
 					$http.get("/iTrust2/api/v1/editPersonalRepresentatives").then(
 						function(response) {
 							$scope.reps = response.data;
-							$scope.message = "";
+							if (!$scope.reps.length) {
+								$scope.messageView = "NO PERSONAL REPRESENTATIVES";
+							}
+							else {
+								$scope.messageView = "";
+							}
 						}, function(rejection) {
 							$scope.reps = [];
-							$scope.message = "Could not display personal representatives.";
+							$scope.messageView = "Could not display personal representatives.";
 						});
 				}
 				
@@ -31,10 +36,15 @@
 					$http.get("/iTrust2/api/v1/editPersonalRepresentatives/myPatients").then(
 						function(response) {
 							$scope.reps2 = response.data;
-							$scope.message2 = "";
+							if (!$scope.reps2.length) {
+								$scope.messageView2 = "NO PATIENTS REPRESENTED";
+							}
+							else {
+								$scope.messageView2 = "";
+							}
 						}, function(rejection) {
 							$scope.reps2 = [];
-							$scope.message2 = "Could not display patients represented.";
+							$scope.messageView2 = "Could not display patients represented.";
 						});
 				}
 				
@@ -68,7 +78,9 @@
 								$scope.loadTable();
 								$scope.rep = "";
 								$scope.errorAdding = "";
+								$scope.successAdding = "Successfully added personal representative";
 							}, function(rejection) {
+								$scope.successAdding = "";
 								$scope.errorAdding = "Could not add personal representative";
 							})
 					
@@ -93,13 +105,14 @@
 								<th>Patient ID</th>
 								<th>Action</th>
 							</tr>
-							<tr name="idRow" ng-repeat="r in reps">
+							<tr name="idRepRow" ng-repeat="r in reps">
 								<td name="idCell">{{r.self.username}}</td>
 								<td>
-									<input type="button" value="Remove" class="btn btn-primary" ng-click="removeRow(r)"/>
+									<input type="button" name="removeRep" value="Remove" class="btn btn-primary" ng-click="removeRow(r)"/>
 								</td>
 							</tr>
 						</table>
+						<p style="color:black" ng-model="messageView" id="messageView">{{messageView}}</p>
 					</td>
 					<td style="width:35%;vertical-align: top">
 						<div style="padding: 0px 0px 20px 10px">
@@ -122,6 +135,9 @@
 							<!-- <h4 style="color: red" ng-show="addCodeForm.$valid">Code doesn't meet specifications</h4>  -->
 							<p style="color:red" ng-model="errorAdding" id="errP">{{errorAdding}}</p>
 						</div>
+						<div>
+							<p style="color:green" ng-model="successAdding" id="succP">{{successAdding}}</p>
+						</div>
 					</td>
 				</tr>
 			</table>
@@ -141,10 +157,11 @@
 							<tr name="idRow" ng-repeat="r in reps2">
 								<td name="idCell">{{r.self.username}}</td>
 								<td>
-									<input type="button" value="Remove" class="btn btn-primary" ng-click="removeRow2(r)"/>
+									<input type="button" name="removePat" value="Remove" class="btn btn-primary" ng-click="removeRow2(r)"/>
 								</td>
 							</tr>
 						</table>
+						<p style="color:black" ng-model="messageView2" id="messageView2">{{messageView2}}</p>
 					</td>
 					
 				</tr>
