--- a/iTrust2/src/main/resources/views/login.html
+++ b/iTrust2/src/main/resources/views/login.html
@@ -7,7 +7,7 @@
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <style>
 body {
-	background-image: url("https://i.imgur.com/d0LYWAL.gif");
+	background-image: url("https://i.imgur.com/gbB95xy.jpg");
 	background-size: cover;
 }
 </style>
